--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parking-frontend",
+  "name": "parking-frontend-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
-    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.15",
     "@types/styled-components": "^5.1.25",
     "babel-plugin-styled-components": "^2.0.7",
     "typescript-plugin-styled-components": "^2.0.0"
