--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/icons-material": "^5.8.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -10,8 +11,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
+    "google-map-react": "^2.2.0",
+    "leaflet": "^1.8.0",
+    "mapbox-gl": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.1",
+    "react-map-gl": "^7.0.18",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
@@ -42,6 +49,9 @@
     ]
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
+    "@types/google.maps": "^3.49.2",
+    "@types/leaflet": "^1.7.11",
     "@types/react": "^18.0.15",
     "@types/styled-components": "^5.1.25",
     "babel-plugin-styled-components": "^2.0.7",
